--- a/style.css
+++ b/style.css
@@ -2175,3 +2175,24 @@ body {
   pointer-events: all;
   cursor: pointer;
 }
+
+table {
+  width: 100%;
+  overflow-x: auto;
+  display: block;
+}
+
+th, td {
+  font-size: 10px;
+  line-height: 1.2;
+  padding: 4px;
+  word-break: break-word;
+  text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  th, td {
+    font-size: 8px;
+    padding: 2px;
+  }
+}
